--- a/iso-tools/index.html
+++ b/iso-tools/index.html
@@ -22,7 +22,7 @@
   <script>
     var defaultCSP = `
     default-src 'self';
-    connect-src 'self' https://4a8a9ab6-235b-4ce4-85fc-96d9223c9bd1.e1-us-east-azure.choreoapps.dev http://localhost:8080/mt-mx/ http://localhost:9081/mt-mx/transform https://api.asgardeo.io/t/wso2healthtools/oauth2/token https://api.asgardeo.io/t/wso2healthtools/oauth2/jwks ${window.Config.BFF_BASE_URL}/;
+    connect-src 'self' https://6755ee75-a57a-4518-8c81-d08d1d3fd10d-dev.e1-us-east-azure.choreoapis.dev http://localhost:8080/mt-mx/ http://localhost:9081/mt-mx/transform https://api.asgardeo.io/t/wso2healthtools/oauth2/token https://api.asgardeo.io/t/wso2healthtools/oauth2/jwks ${window.Config.BFF_BASE_URL}/;
     script-src 'self' 'sha256-CEkdgZ3bDzzzB+8nF1dnqW8Cq4Y7xafzyCUZcyGB124=';
     style-src 'self'  https://fonts.googleapis.com 'unsafe-inline'; 
     frame-src 'self' https://api.asgardeo.io https://accounts.asgardeo.io ${window.Config.APP_AUTH_REDIRECT_BASE_URL};
