Update images + remove unwanted files

--- a/iso-tools/index.html
+++ b/iso-tools/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="Referrer-Policy" value="no-referrer" />
-  <link rel="icon" href="/fhir-tools.png" />
+  <link rel="icon" href="/bt.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="BFSI Tools powered by Choreo" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
