--- a/iso-tools/index.html
+++ b/iso-tools/index.html
@@ -15,7 +15,7 @@
   <link rel="manifest" href="/manifest.json" />
   <title>BFSI Tools</title>
 
-  <script src="/config.js"></script>
+  <script src="public/config.js"></script>
   <script>
     window.Config = Config;
   </script>
