update content security policy

--- a/iso-tools/index.html
+++ b/iso-tools/index.html
@@ -22,7 +22,7 @@
   <script>
     var defaultCSP = `
     default-src 'self';
-    connect-src 'self' https://03c2ef96-d90d-4ca2-8324-1020e3bfb3e6-prod-internal.e1-us-east-azure.internal.choreoapis.dev https://6755ee75-a57a-4518-8c81-d08d1d3fd10d-dev.e1-us-east-azure.choreoapis.dev http://localhost:9090/iso/ http://localhost:9081/mt-mx/transform https://api.asgardeo.io/t/wso2healthtools/oauth2/token https://api.asgardeo.io/t/wso2healthtools/oauth2/jwks ${window.Config.BFF_BASE_URL}/;
+    connect-src 'self' https://03c2ef96-d90d-4ca2-8324-1020e3bfb3e6-prod.e1-us-east-azure.choreoapis.dev https://03c2ef96-d90d-4ca2-8324-1020e3bfb3e6-prod-internal.e1-us-east-azure.internal.choreoapis.dev https://6755ee75-a57a-4518-8c81-d08d1d3fd10d-dev.e1-us-east-azure.choreoapis.dev http://localhost:9090/iso/ http://localhost:9081/mt-mx/transform https://api.asgardeo.io/t/wso2healthtools/oauth2/token https://api.asgardeo.io/t/wso2healthtools/oauth2/jwks ${window.Config.BACKEND_BASE_URL}/;
     script-src 'self' 'sha256-CEkdgZ3bDzzzB+8nF1dnqW8Cq4Y7xafzyCUZcyGB124=';
     style-src 'self'  https://fonts.googleapis.com 'unsafe-inline'; 
     frame-src 'self' https://api.asgardeo.io https://accounts.asgardeo.io ${window.Config.APP_AUTH_REDIRECT_BASE_URL};
